# zephyr-m5-ei-imu

./: CMakeLists.txt  README.md  prj.conf
boards/: m5stack_cores3_esp32s3_procpu.overlay
demo/: main.cpp
src/: main.cpp
